# ActionAllegro

./: Cargo.toml  README.md  SECURITY.md  deps.md  dockerfile-test  index.html  rust-toolchain
.github/workflows/: BuildPackages.yml  test-allegro.yml
assets/: sw.js
src/: app.rs  helpers.rs  lib.rs  main.rs
src/tests/: mod.rs
