[package]
name = "ActionAllegro"
version = "0.1.0"
authors = ["Collin Pendleton <collinp@collinpendleton.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
git2 = "0.18.1"
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.12.1"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21.5"
serde_yaml = { version = "0.9.30", features = [] }

directories = "5.0.1"
rand = "0.8.5"
aes = "0.8.3"
cbc = "0.1.2"
block-padding = "0.3.3"
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
walkdir = "2.4.0"
winit = "0.29.10"
image = "0.24.6"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]